--- a/src/Components/Admin-Section/AdminLogin.css
+++ b/src/Components/Admin-Section/AdminLogin.css
@@ -36,7 +36,6 @@ body {
   position: relative;
   text-align: left;
   align-self: flex-start;
-  height:300px;
 }
 
 .login-logos {
@@ -49,11 +48,10 @@ body {
   margin-left: 30px;
 }
 
-.teampluss-logo {
-  height: 40% !important;
-  margin-left:20px;
-  margin-bottom:0px !important;
- 
+.teampluss-logo {       /* modified */
+  height: 22% !important;  
+  margin-right:180px;     
+  margin-bottom:10px !important;
 }
 
 .stafio-logo {
@@ -64,7 +62,7 @@ body {
   margin-top: 10px;
   font-size: 35px;
   font-weight: 600;
-  color: #1e2a5a;
+  color: #030303;
   width: 100%;
   text-align: left;
   margin-left: 30px;
@@ -80,7 +78,7 @@ body {
 }
 
 .login-description {
-  font-size: 18px;
+  font-size: 16px;     /* modified */
   color: #0a0a0a;
   margin-bottom: 20px;
   line-height: 1.5;
@@ -88,10 +86,11 @@ body {
 }
 
 .login-illustrations {
-  max-width: 60%;
+  width: 530px !important;    /* modified */
+  height: 530px !important;   /* modified */
   z-index: 2;
   position: relative;
-  margin-top: -20px;
+  margin-top: -260px !important;  /* modified */
   align-self: center;
 }
 
@@ -108,18 +107,18 @@ body {
 .login-form-wrapper h5 {
   color: #36baee;
   font-weight: 500;
-  font-size: 23px;
-  padding-bottom: 20px;
+  font-size: 24px;         /* modified */
+  padding-bottom: 10px;    /* modified */
 }
 
 .login-form-wrapper h3 {
   font-weight: 600;
-  font-size: 30px;
+  font-size: 36px;         /* modified */
 }
 
 .email-input {
   background: #e9eaea;
-  width: 400px;
+  width: 450px !important;    /* modified */
   height: 40px;
   border-radius: 8px;
   border: 1px solid #ced4da;
@@ -131,12 +130,13 @@ body {
 }
 
 .login-btn {
-  width: 400px;
+  width: 450px !important;      /* modified */
   background-color: #19BDE8;
   border: none;
   font-weight: 600;
   padding: 10px;
   border-radius: 8px;
+  margin-bottom: 20px;      /* modified */
 }
 
 .login-btn:hover {
@@ -182,23 +182,25 @@ body {
 }
 
 .forgot-password-link {
-  font-size: 16px;
+  font-size: 14px;
   color: #000;
   text-decoration: none;
 }
 
+.forgot-password-link:hover {
+  text-decoration: underline;
+}
 
 
-
-.google-login-custom {
+/* .google-login-custom {
   width: 100%;
-  max-width: 400px;
+  max-width: 450px !important;
   margin-top:20px;
   text-align: center;
   border-radius: 15px !important;
   font-size: 18px;
   font-weight: 600;
-  color: #19bde8; /* Blue text */
+  color: #19bde8; 
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -206,13 +208,76 @@ body {
   gap: 10px;
   border: 1px solid #e0e8ff;
   transition: 0.2s ease;
+} */
+
+ /* .google-login-custom:hover {
+  background: #e9f2ff;
+ } */
+
+/* .google-icon {
+  width: 2px !important;
+  height: 22px !important;
+  right: 20px ;
+} */
+
+/* #googleLoginButton{
+  width: 440px !important;
+  margin-left: -40px;
+  
+
+}  */
+
+/* #googleLoginButton div {
+  margin-top: 15px !important;
+  margin-bottom: -2px ;
+  padding-bottom: 25px;
+  margin-left: 30px;
+  margin-right: 10px;
+  background: #e7faff !important;
+  color: #1a8caf;
+  border: none;
+  border-radius: 10px !important;
+  font-size: 18px;
+  height: 45px;
+  bottom: 2px;
+  
+} */
+ 
+.custom-google-btn {
+  width: 450px;
+  height: 45px;
+  background: #e7faff;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content:left;
+  gap: 10px;
+  cursor: pointer;
+  margin-top: 15px;
+  transition: 0.2s ease;
+  
 }
 
-.google-login-custom:hover {
-  background: #e9f2ff;
+.custom-google-btn:hover {
+  background: #d9f4ff;
+}
+
+.custom-google-btn span {
+  font-size: 18px;
+  font-weight: 600;
+  color: #00b5e2;
 }
 
 .google-icon {
-  width: 22px;
-  height: 22px;
+  width: 30px !important;
+  height: 20px !important;
+}
+
+.google-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
