--- a/src/Components/Admin-Section/AdminRegister.css
+++ b/src/Components/Admin-Section/AdminRegister.css
@@ -38,18 +38,20 @@ body {
 }
 
 .register-logos  {
+  margin-top: 10px;
   display: flex;
-  margin:0px !important;
+  align-items: center;
   justify-content: flex-start;
- 
+  gap: 15px;
+  margin-bottom: 0px !important;
+  margin-left: 30px;
 }
 
-.teamplus-logo {
-  height: 120px !important;
-  margin-left:20px;
-  margin-top:-50px !important;
-  width:325px !important;
- 
+.teamplus-logo {          /* modified */
+  height: 22% !important; 
+  width: 60%; 
+  margin-right:180px;     
+  margin-bottom:10px !important;
 }
 
 .stafio-logo {
@@ -57,10 +59,10 @@ body {
 }
 
 .register-heading {
-  margin-top: 10px;
-  font-size: 35px;
+  margin-top: 6px;  /* margin-top: 10px; */
+  font-size: 37px;  /* font-size: 35px;    */
   font-weight: 600;
-  color: #1e2a5a;
+  color: #000;   /* modified */
   width: 100%;
   text-align: left;
   margin-left: 30px;
@@ -76,15 +78,16 @@ body {
 }
 
 .register-description {
-  font-size: 18px;
+  font-size: 16px;  /* font-size: 18px; */
   color: #0a0a0a;
   margin-bottom: 20px;
   line-height: 1.5;
-  margin-left: 30px;
+  margin-left: -160px;  /* modified */
 }
 
 .register-illustration {
-  width: 70%;
+  width: 100%;
+  height: 70% !important;
   z-index: 2;
   position: relative;
   margin-top: -40px;
@@ -95,48 +98,113 @@ body {
 /* ===== RIGHT SIDE ===== */
 .register-form-wrapper {
   background: #ffffff;
-  padding:50px;
+  padding: 50px;
   border-radius: 0;
-
+  margin-left: 50px;
 }
 
 .register-form-wrapper h5 {
   color: #36baee;
-  font-weight: 600;
-  font-size: 20px;
+  font-weight: 500;
+  font-size: 15px;  /* font-size: 20px; */
   padding-bottom: 15px;
 }
 
 .register-form-wrapper h3 {
   font-weight: 600;
-  font-size: 30px;
+  font-size: 34px;  /* font-size: 30px; */
+  padding-bottom: 5px;
 }
+
 
 .register-form-wrapper .form-control {
  
-  width: 400px;
-  height: 40px;
-  border-radius: 8px;
-  border: 1px solid #ced4da;
+  width: 450px;              /* modified */
+  /* height: 40px ; */          /* modified */
+  border-radius: 8px ;
+  border: 1px solid #ced4da !important;    /* modified */
 }
 
 .register-form-wrapper .form-control:focus {
   border-color: #19BDE8;
   box-shadow: 0 0 0 0.2rem rgba(25, 189, 232, 0.25);
 }
+ /* Terms and condition checkbox */
+.terms-container {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 16px;
+  font-size: 14px;
+}
 
+.terms-checkbox {
+  width: 16px;
+  height: 16px;
+  cursor: pointer;
+  
+}
+
+.terms-label {
+  color: #333;
+  cursor: pointer;
+}
+
+.terms-link {
+  color: #1a73e8;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.terms-link:hover {
+  text-decoration: underline;
+}
+
+/* password errors */
+.password-rules {
+  font-size: 14px;
+  margin-top: 6px;
+}
+
+.password-rules ul {
+  padding-left: 18px;
+}
+
+.valid {
+  color: green;
+}
+
+.invalid {
+  color: red;
+}
+
+/* signup btn */
+.signup-btn {
+  width: 100%;
+  padding: 12px;
+  background-color: #1a73e8;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+/* Disabled state */
+.signup-btn:disabled {
+  background-color: #c9d6f2;
+  cursor: not-allowed;
+}
+
+/* signup button */
 .register-btn {
-  width: 400px;
+  width: 450px;       /* modified */
   background-color: #19BDE8;
   border: none;
   font-weight: 600;
   padding: 10px;
   border-radius: 8px;
-}
-
-.form-check-input{
-  border:1px outset #197ae8ff;
-  
+  height: 47px ;
 }
 
 .register-btn:hover {
@@ -163,18 +231,19 @@ body {
 }
 
 .google-btn {
-  width: 400px !important;
+  width: 450px !important;   /* modified */
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 12px;
   padding: 12px 16px;
-  background-color: #1befe5ff;
-  border: 1px solid #dadce0;
+  background-color: #EFF5FF !important;  /* modified */
+  border: 0px solid #dae0e0 !important;  /* modified */
   border-radius: 18px;
   font-size: 14px;
+  padding-right: 130px; /* modified */
   font-weight: 600;
-  color: #83bce7ff;
+  color: #83bce7ff ;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
   box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.1);
@@ -199,8 +268,11 @@ body {
 
 .google-icon {
   flex-shrink: 0;
-  width: 20px;
-  height: 20px;
+  width: 36px;    /* modified */
+  height: 26px;   /* modified */
+  /* padding-right: 10px; */
+   padding-left: 10px;
+   margin-left: 65px;   /* modified */
 }
 
 .google-btn span {
@@ -233,3 +305,4 @@ body {
 .google-btn:hover {
   background: #f5f5f5;
 }
+
