--- a/src/Components/Admin-Section/AdminSidebar.css
+++ b/src/Components/Admin-Section/AdminSidebar.css
@@ -11,7 +11,7 @@
   padding: 20px 0;
   display: flex;
   flex-direction: column;
-   height: 100vh; 
+  height: 100vh;
   transform: translateX(-100%);
   opacity: 0;
   transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
@@ -53,10 +53,10 @@
 .sidebar-link {
   display: flex;
   align-items: center;
-  justify-content: ;
+  /* justify-content: ; */
   color: #fff !important;
   text-decoration: none;
-  padding: 28px 15px;
+  padding: 28px 15px !important;      /* modified */
   font-size: 18px;
   font-weight: 500;
   border-top: 1px solid #fff;
