--- a/src/Components/Admin-Section/Approval/LeavePolicies.css
+++ b/src/Components/Admin-Section/Approval/LeavePolicies.css
@@ -128,7 +128,7 @@
 .leave-policies-modal-header {
   background: #19bde8;
   color: #fff;
-  padding: 16px 20px;
+  padding: 7px 18px;        /* modified */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -136,15 +136,15 @@
 
 .leave-policies-modal-title {
   margin: 0;
-  font-size: 18px;
-  font-weight: 500;
+  font-size: 17px;      /* modified */
+  font-weight: 600;     /* modified */
 }
 
 .leave-policies-close-btn {
   background: none;
   border: none;
   color: #fff;
-  font-size: 24px;
+  font-size: 30px ;    /* modified */
   cursor: pointer;
   padding: 0;
   width: 30px;
@@ -181,7 +181,7 @@
 .leave-policies-field label {
   font-size: 14px;
   font-weight: 500;
-  color: #333;
+  color: #030303;    /* modified */
 }
 
 /* ===== Inputs & Selects ===== */
@@ -240,7 +240,7 @@
 }
 
 .leave-policies-checkbox:checked::after {
-  content: '✓';
+  /* content: '✓'; */
   position: absolute;
   top: -1px;
   left: 1px;
@@ -261,7 +261,8 @@
   background: #19bde8;
   color: #fff;
   border: none;
-  padding: 10px 24px !important;
+  height: 35px;
+  padding: 5px 24px !important;
   border-radius: 6px;
   font-size: 14px;
   font-weight: 500;
@@ -277,7 +278,8 @@
   background: #fff;
   color: #666;
   border: 1px solid #ddd;
-  padding: 10px 24px;
+  height: 35px;
+  padding: 5px 24px;
   border-radius: 6px;
   font-size: 14px;
   font-weight: 500;
@@ -287,4 +289,11 @@
 
 .leave-policies-cancel-btn:hover {
   background: #f5f5f5;
+}
+
+/* new */
+.leave-policies-error {
+  color: red;
+  font-size: 13px !important;
+  margin-top: -3px !important;
 }
