--- a/src/Components/Admin-Section/ForgotPasswordPopup.css
+++ b/src/Components/Admin-Section/ForgotPasswordPopup.css
@@ -2,8 +2,7 @@
    POPUP BASE STYLE
 ---------------------------- */
 .modal-content {
-  min-height:350px;
-  border-radius: 8px !important;
+  border-radius: 12px !important;
   padding: 10px !important;
   box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.15);
   border: none !important;
@@ -12,30 +11,24 @@
 /* Popup Title */
 .modal-body h3,
 .modal-body h4 {
-  font-weight: 500;
+  font-weight: 600;
   color: #1a1a1a;
-}
-
-.modal-body h3{
-  margin-top:20px !important;
-  margin-bottom:20px !important;
 }
 
 /* Normal text */
 .modal-body p {
   color: #555;
   font-size: 14px;
-  margin-bottom:20px !important;
 }
 
 /* ---------------------------
    INPUT FIELDS
 ---------------------------- */
 .modal-body .form-control {
-  border: 1px solid #030303ff !important;
+  border: 1.5px solid #d9d9d9;
   height: 42px;
   font-size: 14px;
-  border-radius: 5px !important;
+  border-radius: 8px;
   transition: all 0.2s ease-in-out;
 }
 
@@ -52,7 +45,7 @@
   border: none !important;
   height: 42px;
   font-weight: 600;
-  border-radius: 5px;
+  border-radius: 8px;
   letter-spacing: 0.5px;
 }
 
@@ -70,110 +63,5 @@
 .alert-danger {
   font-size: 14px;
   padding: 8px 12px;
-  border-radius: 6px;
-}
-
-.otp-modal {
-  border-radius: 12px;
-}
-
-.otp-title {
-  font-weight: 600;
-  margin-top:20px;
-  margin-bottom: 20px;
-  text-align:left;
-}
-
-.otp-subtitle {
-  font-size: 14px;
-  color: #6d6d6dff !important;
-  margin-bottom: 20px;
-}
-
-.otp-inputs {
-  display: flex;
-  justify-content: center;
-  gap: 12px;
-  margin-bottom: 15px;
-}
-
-.otp-inputs input {
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  font-size: 22px;
-  border-radius: 5px;
-  border: 1px solid #cfd8dc;
-  outline: none;
-  color: #20bce3;
-}
-
-.otp-inputs input:focus {
-  border-color: #20bce3;
-}
-
-.otp-timer {
-  color: red;
-  font-weight: 500;
-  margin-bottom: 20px;
-}
-
-.otp-btn {
-  background-color: #20bce3;
-  border: none;
-  padding: 12px;
-  font-weight: 500;
-}
-
-.otp-resend-text {
-  margin-top: 15px;
-  font-size: 14px;
-  color: #777;
-}
-
-.resend-link {
-  border: none;
-  background: none;
-  color: #ff5722;
-  cursor: pointer;
-  font-weight: 500;
-}
-
-.resend-link:disabled {
-  color: #ccc;
-  cursor: not-allowed;
-}
-
-.success-modal {
-  border-radius: 12px;
-}
-
-.success-icon {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.success-icon img {
-  width: 160px;
-  height: 160px;
-}
-
-.success-title {
-  font-weight: 600;
-  margin-bottom: 8px;
-}
-
-.success-subtitle {
-  font-size: 14px;
-  color: #777;
-  margin-bottom: 25px;
-}
-
-.success-btn {
-  background-color: #20bce3;
-  border: none;
-  padding: 12px;
-  font-weight: 500;
   border-radius: 6px;
 }
