--- a/src/Components/Admin-Section/Topbar.css
+++ b/src/Components/Admin-Section/Topbar.css
@@ -1,20 +1,25 @@
 .topbar {
-    margin-top:40px;
-  height: 60px;
+    margin-top: 20px !important;
+  height: 70px ;
   background: #fff;
   border-radius: 10px;
-  margin: 10px; 
+  margin: 10px;
+  padding-top: 5px !important;       /* new */
+  padding-bottom: 5px !important;    /* new */
+  width: auto;
+  margin-left: 13px !important;        /* modified */
 }
 
 .topbar-img {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   object-fit: contain;
 }
 
 .form-controler{
   border-radius: 20px !important;
-  width:50% !important;
+  width:40% !important;
+  height: 35px !important;
   padding:10px 12px !important;
   border:1px solid #ccc;
   outline: none;
@@ -27,6 +32,7 @@
 
 .topbar-search{
     width:40%;
+    background-color:  #F6F6F6;
 }
 
 .topbar-avatar {
@@ -38,6 +44,107 @@
 .profile{
     margin-right:50px;
 }
+
+/* NEW CSS part */
+/* Admin profile popup  */
+
+.profile0{
+    margin-right:25px;
+    /* gap:10px; */
+}
+
+.profile-data1{
+  gap:5px;
+}
+
+.full-profile-popup1 {
+  position: absolute;
+  top: 70px;
+  right: 45px;
+  width: 900px;
+  max-height: 90vh;
+  overflow-y: auto;
+  background: #fff;
+  border-radius: 16px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+  padding: 20px;
+  z-index: 1000;
+  animation: fadeIn 0.2s ease-in-out;
+}
+
+.popup-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  justify-items: center;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+}
+
+.popup-content {
+  padding: 10px 15px;
+  background: #ffffffff ;
+}
+
+.profile-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.profile-photo {
+  text-align: center;
+  
+}
+
+.profile-photo img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+.details-grid {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  flex-wrap: wrap;
+
+}
+
+.details-grid div {
+  flex: 1;
+  min-width: 250px;
+  background: #ffffffff;
+  padding: 10px 15px;
+  border-radius: 10px;
+  text-align:left;
+}
+
+.details-grid p {
+  color: #000;          /* Makes it darker (pure black) */
+  font-weight: 700;     /* Ensures boldness */
+}
+
+
+.details-grid h6 {
+  color: #47a0dbff;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.btn-close {
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(-5px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
 
 
 /* AnnouncementPopup.css */
@@ -438,6 +545,8 @@
   border: none;
   font-size: 20px;
   cursor: pointer;
+  color: #000;
+  text-align: center;
 }
 
 @keyframes fadeIn {
