--- a/src/Components/Admin-Section/settings-/admin-settings.css
+++ b/src/Components/Admin-Section/settings-/admin-settings.css
@@ -158,15 +158,14 @@
 
 /* Button styling (for department tab) */
 .btn-create-new {             /*new modified*/
-  background: #19bde8;
+  background: #00bcd4;
   color: white;
   border: none;
   padding: 1px 20px;
   border-radius: 20px;
   cursor: pointer;
-  height: 40px;
-  margin-bottom: -30px;
-  margin-right:50px;
+  height: 36px;
+  margin-bottom: -22px;
 
 }
 
@@ -219,7 +218,7 @@
 .form-group label {
   font-weight: 500;
   /* font-size: 10px !important; */
-  margin-bottom: 0px !important;
+  margin-bottom: 8px;
   color: #374151;
 }
 
@@ -259,7 +258,7 @@
 
 .form-group1 input{     /*new*/
   padding: 9px 12px 10px 10px;
-  width: 340px ;
+  width: 315px ;
   height: 40px;
   border-color: #d6cfcf;
   border-style:solid;
@@ -282,7 +281,7 @@
 
 .form-group2 select{     /*new*/
   padding: 9px 12px 10px 10px;
-  width: 340px ;
+  width: 315px ;
   height: 40px;
   border-color: #d6cfcf;
   border-style:solid;
@@ -329,7 +328,7 @@
   border: 1px solid #cbd5e1;
   border-radius: 6px;
   background-color:#f7f8f8;
-  width: 340px; /* adjust if needed */
+  width: 315px; /* adjust if needed */
 }
 
 /* Toggle Switch */
@@ -468,7 +467,6 @@ input:checked + .slider:before {
     border-radius: 10px ;
 }
 
-
 .team-table th, .team-table td,
 .department-table th, .department-table td {
   padding: 12px;
@@ -478,7 +476,8 @@ input:checked + .slider:before {
 }
 .team-table th {              /*modified  */
     background: #e7e4e4ff;
-    
+    border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
     
 }
 
@@ -544,7 +543,8 @@ input:checked + .slider:before {
 
  .department-table th {
   background: #e7e4e4ff;
-  
+  border-top-left-radius: 6px;   /*new  */
+  border-top-right-radius: 6px;  /*new  */
   font-weight: 600;              /*new  */
  } 
 
@@ -631,13 +631,12 @@ input:checked + .slider:before {
 }
 
 .btn-create-new1 {         /*new  */
-  background: #19bde8;
+  background: #00bcd4;
   color: white;
   border: none;
-  padding: 5px 20px;
+  padding: 1px 20px;
   border-radius: 20px;
   cursor: pointer;
   margin-bottom: 20px;
-  height: 40px;
-  
+  height: 36px;
 }
