--- a/src/Components/Employee-Section/Dashboard/EmployeeDashboard.css
+++ b/src/Components/Employee-Section/Dashboard/EmployeeDashboard.css
@@ -52,9 +52,9 @@
 .meeting-left{
   margin-left:10px;
   height:250px;
-  align
+  /* align */
 }
-.meeting-left h2 {
+.meeting-left h2{
   font-size: 25px;
   font-weight: 400;
   margin: 0 0 15px;
@@ -233,7 +233,7 @@
   border-radius: 12px;
   padding: 16px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-  height: 95%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -262,9 +262,6 @@
 .attendance-card .recharts-wrapper {
   margin-top: 8px;
 }
-.recharts-surface{
-  margin-left:-10px;
-}
 
 .attendance-card .recharts-cartesian-axis-tick-value {
   font-size: 12px;
@@ -287,7 +284,7 @@ background:#E6EAF5;
 .punch-info-box {
   display: flex;
   gap: 25px;
-  justify-content: ;
+  /* justify-content: ; */
   margin: 15px 0;
   font-size: 16px;
   
@@ -302,7 +299,7 @@ background:#E6EAF5;
 .button-row {
   display: flex;
   gap: 24px;
-  justify-content:;
+  /* justify-content:; */
   
 }
 .btn-punch-out{
